--- a/style.css
+++ b/style.css
@@ -438,15 +438,54 @@ padding: .8rem 3rem;
 font-size: 1.3rem;
 line-height: 1.5;
 color: var(--light-color);
-
 }
 
+.order form{
+    width: 90rem;
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    border: .1rem solid rgba(0, 0, 0, 0.2);
+    background: #fff;
+    padding: 1.5rem;
+    margin: 0 auto;
+}
+.order form .input-box{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.order form .input-box .input{
+    width: 49%;
+}
+.order form .input-box .input span{
+    display: block;
+    padding: .5rem 0;
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
+.order form .input-box .input input,
+.order form .input-box .input textarea{
+    background: #eee;
+    border-radius: .5rem;
+    padding: 1rem;
+    font-size: 1.6rem;
+    color: var(--black);
+    text-transform: none;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+.order form .input-box .input input:focus,
+.order form .input-box .input textarea:focus{
+    border: .1rem solid var(--green);
+}
+.order form .input-box .input textarea{
+    height: 20rem;
+    resize: none;
+}
 
-
-
-
-
-
+.order form .btn{
+    margin-top: 0;
+}
 
 
 
@@ -500,12 +539,15 @@ color: var(--light-color);
     font-size: 5rem;
 }
 }
-@media  only screen and (max-width:991px){
+@media  only screen and (max-width:450px){
     html{
         font-size: 50%;
     }
     .dishes .box-container .box img{
         height: auto;
+        width: 100%;
+    }
+    .order form .input-box .input{
         width: 100%;
     }
 
