--- a/style.css
+++ b/style.css
@@ -486,6 +486,62 @@ color: var(--light-color);
 .order form .btn{
     margin-top: 0;
 }
+.footer .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(24rem,1fr));
+    gap: 1.25rem;
+}
+.footer .box-container .box h3{
+    padding: .5rem 0;
+    font-size: 2.3rem;
+    color: var(--black);
+}
+.footer .box-container .box a{
+    display: block;
+    padding: .5rem 0;
+    font-size:1.5rem;
+    color: var(--light-color);
+}
+.footer .box-container .box a:hover{
+    text-decoration: underline;
+    color: var(--green);
+}
+
+.footer .credit{
+    text-align: center;
+    border-top: .1rem solid rgba(0, 0, 0, 0.1);
+    font-size: 2rem;
+    color: var(--black);
+    padding: .5rem;
+    padding-top: 1.5rem;
+    margin-top: 1.5rem;
+}
+
+.footer .credit span{
+    color: var(--green);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
